Tue May 23 17:34:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed max_attain for net backend.

Tue May 23 16:57:44 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Made RSets work with network db.

Tue May 23 16:36:25 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug due to uninitialised members in OmDocumentTerm.

Tue May 23 14:51:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed boolean queries with the net backend.

Tue May 23 14:06:40 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* apitest sleepy tests now remove the generated indexes before
	  running.

Tue May 23 12:18:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* SocketServer now correctly handles more than one query.

Tue May 23 12:00:38 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a NetworkTermList object.  Currently a fair way from working
	  correctly, but it does compile:  uses lots of unimplemented
	  methods.

	* General work on termlists (documentation comments, code tidying),
	  and expand.

Mon May 22 18:36:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* ProgClient and omprogsrv can both now take more than one database
	  argument.

	* Net stuff now doesn't bomb out from SIGPIPE.

	* Miscellaneous bug fixes

	* apitest has code to run tests on the net backend.

Mon May 22 15:31:12 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved inline functions from testutils.h to testutils.cc

	* Separated out the non-backend-using tests from apitest to
	  avoid running them more than once when more than one backend
	  is compiled in.

Mon May 22 14:53:25 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* FAIL_TEST macro in testsuite.h now takes notice of the verbose
	  flag.

	* In theory, the sleepy tests are only run if the sleepy backend
	  is compiled in (as well as the #if 0)

Mon May 22 13:44:21 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
